--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-coverage",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index.js",
   "type": "module",
   "scripts": {
     "start": "nodemon index.js"
